moving getPosts from user route to post route and fixing doc
